--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,8 @@ services:
     env: python
     region: oregon
     plan: free
+    repo: https://github.com/donmckinney12/LogiMatch-AI
+    branch: main
     rootDirectory: backend
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
